# hugit-cli

./: .cookiecutter.json  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  tests.yml
docs/: conf.py  index.md  requirements.txt  usage.md
src/hugit/: __init__.py  __main__.py  cli.py  console.py  convert.py  core.py  dataset.py  image_dataset.py  project.toml
tests/: __init__.py  test_cli.py  test_convert.py  test_core.py  test_image_dataset.py  test_main.py
